# Crop-Recommendation-System

./: .gitattributes  .gitignore  .replit  app.py  crop_data.csv  crop_info.py  data_processor.py  model_trainer.py  package-lock.json  pyproject.toml  utils.py
.streamlit/: config.toml
crop_env/: pyvenv.cfg
crop_env/Scripts/: activate  activate.bat
